--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 auth-module = { path = "../auth", features = [] }
-axum = { version = "0.7.5", optional = true }
-axum-extra = { version = "0.9.1", features = ["typed-header"], optional = true }
+axum = { version = "0.8.1", features = ["macros"], optional = true }
+axum-extra = { version = "0.10.0", features = ["typed-header"], optional = true }
 mongodb = "3.0.0"
 serde = { version = "1.0.188", features = ["derive"] }
 thiserror = "2.0.7"
@@ -16,5 +16,5 @@ tokio = "1.42.0"
 axum_router = ["dep:axum", "dep:axum-extra"]
 
 [dev-dependencies]
+fake = { version = "3.1.0", features = ["derive", "dummy"] }
 mockall = "0.13.0"
-fake = { version = "2.9.2", features = ["derive", "dummy"] }
